--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap" rel="stylesheet"> 
+
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
