--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#f5f2e3">
+
+  <script async defer data-domain="pocketcompanion.fantinel.dev" src="https://stats.fantinel.dev/js/index.js"></script>
 </head>
 
 <body>
