--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,19 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icons/favicon.png"/>
-
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&amp;display=swap" rel="stylesheet"> 
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
+  <link rel="manifest" href="manifest.webmanifest?v=eEYX6lwa41">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png?v=eEYX6lwa41">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png?v=eEYX6lwa41">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png?v=eEYX6lwa41">
+  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg?v=eEYX6lwa41" color="#14c5b5">
+  <link rel="shortcut icon" href="assets/favicons/favicon.ico?v=eEYX6lwa41">
+  <meta name="msapplication-TileColor" content="#f5f2e3">
   <meta name="theme-color" content="#f5f2e3">
 
   <script async defer data-domain="pocketcompanion.fantinel.dev" src="https://stats.fantinel.dev/js/index.js"></script>
